--- a/layout5.css
+++ b/layout5.css
@@ -7,14 +7,24 @@
     padding:0;
     box-sizing: border-box;
 }
+body
+{
+    background: #DCE35B;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #45B649, #DCE35B);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #45B649, #DCE35B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+}
 .box
 {
     width:400px;
-    min-height: 270px;
+    height: 315px;
     border:2px solid #000;
     margin: 140px auto;
     border-radius: 20px;
-    background-color: white;
+    background: #B2FEFA;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0ED2F7, #B2FEFA);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0ED2F7, #B2FEFA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .header{
     width:100%;
@@ -67,6 +77,30 @@ input[type=password]
     border: none;
     border-bottom: 2px solid black;
     font-family: "Oswald", sans-serif;
-    background-image : url(../images/) ;
+    background-image: url(../images/pas.png);
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    text-align: center;
+} 
+input[type=password]:focus
+{
+    border-color: black;
+    background-color: hotpink;
 }
-    
+input[type=submit]
+{
+    width:100%;
+    height: 40px;
+    margin-top: 20px;
+    border: none;
+    background-color: chartreuse;
+    color: white;
+    font-family: "Oswald", sans-serif;;
+    font-size: 16px;
+    border-radius: 10px;
+}
+input[type=submit]:hover{
+    background-color: purple;
+    color: white;
+}
+
